--- a/src/Components/User/UserProfile.css
+++ b/src/Components/User/UserProfile.css
@@ -14,7 +14,7 @@
   height: 100vh;
 }
 
-.Login-Wrapper {
+.User-Info-Wrapper {
   display: flex;
   border: 1px solid #e0e0e0;
   border-radius: 10px;
@@ -23,7 +23,7 @@
   gap: 16px;
 }
 
-.icon {
+.User-Info-icon {
   border: 1px solid lightblue;
   border-radius: 50%;
   border-width: 12px;
@@ -34,4 +34,16 @@
   font-size: 32px;
   font-weight: 600;
   margin-bottom: 24px;
+}
+
+.User-SideBar-Links {
+  display: flex;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  padding: 16px;
+  align-items: center;
+}
+
+.User-SideBar-Links:hover {
+  background-color: lightgrey;
 }
