Restaurants added to SideBar, can switch between profile and restaurants, restaurants has links to new restaurant, and some styling done

--- a/src/Components/User/UserProfile.css
+++ b/src/Components/User/UserProfile.css
@@ -38,10 +38,11 @@
 
 .User-SideBar-Links {
   display: flex;
-  border: 1px solid #e0e0e0;
-  border-radius: 10px;
-  padding: 16px;
+  /* border: 1px solid #e0e0e0; */
+  border-radius: 5px;
+  padding: 12px;
   align-items: center;
+  gap: 10px;
 }
 
 .User-SideBar-Links:hover {
